# aiSFX

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api.md  changelog.md  conf.py  index.md  installation.md
docs/source/notebooks/: tutorial.ipynb
src/aisfx/: __init__.py  inference.py  preprocessing.py  utils.py
src/aisfx/models/: cnn2d.py
src/aisfx/spectrogram/: spectrogram_essentia.py  spectrogram_librosa.py
